<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.leonardescorcia.altosdelalgoritmo.Registrar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="14dp"
                android:layout_weight="0.43"
                android:gravity="center_horizontal|center"
                android:text="@string/titulo_registro"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView2"
                android:layout_marginTop="10dp"
                android:layout_weight="0.43"
                android:text="@string/nomenclatura"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView5"
                android:layout_weight="0.31"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/txtNomenclatura"
                    android:layout_width="129dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:ems="10"
                    android:gravity="center_horizontal|center"
                    android:hint="@string/numero"
                    android:inputType="number"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="51dp"
                    tools:layout_editor_absoluteY="57dp" />

                <Spinner
                    android:id="@+id/spnPiso"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginEnd="21dp"
                    android:layout_marginRight="21dp"
                    android:contextClickable="false"
                    android:scrollbarSize="45dp"
                    tools:layout_editor_absoluteX="286dp"
                    tools:layout_editor_absoluteY="57dp" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/search"
                    android:onClick="buscar"
                    android:textSize="24sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linearLayout"
                android:layout_marginTop="10dp"
                android:layout_weight="0.43"
                android:text="@string/tamano"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/linearLayout2"
                android:layout_weight="0.43"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:weightSum="1">

                <EditText
                    android:id="@+id/txtTamano"
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/linearLayout2"
                    android:layout_weight="0.11"
                    android:elevation="0dp"
                    android:ems="10"
                    android:gravity="center_vertical|center_horizontal|center"
                    android:hint="@string/area"
                    android:inputType="number"
                    android:singleLine="false"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="101dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal|center"
                    android:text="@string/m2"
                    android:textAlignment="textStart"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linearLayout3"
                android:layout_marginTop="10dp"
                android:layout_weight="0.43"
                android:text="@string/caracteristica"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView7"
                android:layout_marginTop="5dp"
                android:layout_weight="0.43"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chbBalcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/balcon"
                    android:textSize="24sp" />

                <CheckBox
                    android:id="@+id/chbSombra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sombra"
                    android:textSize="24sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/linearLayout4"
                android:layout_marginTop="10dp"
                android:layout_weight="0.43"
                android:text="@string/precio"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView8"
                android:layout_weight="0.43"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txtPrecio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/precio"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.68"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="guardar"
                        android:text="@string/registrar"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="eliminar"
                        android:text="@string/eliminar"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1.48"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="borrar"
                        android:text="@string/limpiar"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="modificar"
                        android:text="@string/modificar"
                        android:textSize="24sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>

